ensure consistent spacing for the story sections

--- a/src/App.css
+++ b/src/App.css
@@ -497,9 +497,8 @@ body.collection-type-index .color-weight-dark .punch-logo-sm img { -webkit-filte
 }
 .stories {
   margin: 0 auto;
-  /* margin-top: 70px; */
   margin-bottom: 35px;
-  padding: 30px 0;
+  padding: 40px 0 50px 0;
   text-align: center;
 }
 .rightMargin{
